--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    </header>
    <main>
     <nav class="foto">
-        <img src="/practicas de EGG/pagina N1/IMG/456212.png" alt="my_foto" class="img">
+        <img src="/IMG/456212.png" alt="my_foto" class="img">
         <div class="cont">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, sit quisquam quas beatae ullam illum nulla quae dolores maxime quibusdam consequatur, iusto pariatur fugit voluptatem eveniet culpa deserunt officia tenetur!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, sit quisquam quas beatae ullam illum nulla quae dolores maxime quibusdam consequatur, iusto pariatur fugit voluptatem eveniet culpa deserunt officia tenetur!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, sit quisquam quas beatae ullam illum nulla quae dolores maxime quibusdam
              consequatur, iusto pariatur fugit voluptatem eveniet culpa deserunt officia tenetur!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, sit quisquam quas beatae ullam illum nulla quae dolores maxime quibusdam consequatur, iusto pariatur fugit voluptatem eveniet culpa deserunt officia tenetur!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, sit quisquam quas beatae
